All products table in dashboard

--- a/main-files/dashboard/all-products.html
+++ b/main-files/dashboard/all-products.html
@@ -394,24 +394,410 @@
                </div>
                <!--  -->
                <div class="table-responsive all-products-table">
-                  <table class="table table-striped">
+                  <table class="table table-bordered">
                      <thead>
                         <tr>
-                           <td>
+                           <th class="d-flex align-items-center gap-2">
                               <input
                                  type="checkbox"
                                  name="select"
                                  id="select"
                               />
-                              Product Name
-                           </td>
-                           <td>Price</td>
-                           <td>Stock</td>
-                           <td>Category</td>
-                           <td>Rating</td>
-                           <td>Action</td>
+                              <span>Product Name</span>
+                           </th>
+                           <th>Price</th>
+                           <th>Stock</th>
+                           <th>Category</th>
+                           <th>Rating</th>
+                           <th>Action</th>
                         </tr>
                      </thead>
+                     <tbody>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-1.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">OE Replica Wheels</span>
+                           </td>
+                           <td>$45.00</td>
+                           <td>32 Items Left</td>
+                           <td>BMW</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.5</span
+                              >
+                              <span class="rable-review">4.2 Review</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-2.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Ford Mustang</span>
+                           </td>
+                           <td>$60.00</td>
+                           <td>20 Items Left</td>
+                           <td>Tata</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.99</span
+                              >
+                              <span class="rable-review">50 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-3.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Steering Wheel Cover</span>
+                           </td>
+                           <td>$35.00</td>
+                           <td>99 Items Left</td>
+                           <td>Ford</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 3.99</span
+                              >
+                              <span class="rable-review">200 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-4.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Tail Light Assembly</span>
+                           </td>
+                           <td>$50.00</td>
+                           <td>321 Items Left</td>
+                           <td>Toyota</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 2.32</span
+                              >
+                              <span class="rable-review">520 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-5.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Alloy Wheel 17x7.5</span>
+                           </td>
+                           <td>$6.52</td>
+                           <td>199 Items Left</td>
+                           <td>Chevrolet</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.62</span
+                              >
+                              <span class="rable-review">10 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-6.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Brake Conversion Kit</span>
+                           </td>
+                           <td>$23.52</td>
+                           <td>921 Items Left</td>
+                           <td>Honda</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 5.00</span
+                              >
+                              <span class="rable-review">43 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-7.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Shock Mount Insulator</span>
+                           </td>
+                           <td>$54.52</td>
+                           <td>22 Items Left</td>
+                           <td>Mercedes-Benz</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 5.00</span
+                              >
+                              <span class="rable-review">99 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-8.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Steel Rim 9×22.5</span>
+                           </td>
+                           <td>$70.00</td>
+                           <td>10 Items Left</td>
+                           <td>Hyundai</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.00</span
+                              >
+                              <span class="rable-review">9 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-9.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Car Floor Mats</span>
+                           </td>
+                           <td>$100.00</td>
+                           <td>291 Items Left</td>
+                           <td>Audi</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.52</span
+                              >
+                              <span class="rable-review">1.5K Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-1.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">OE Replica Wheels</span>
+                           </td>
+                           <td>$45.00</td>
+                           <td>32 Items Left</td>
+                           <td>BMW</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.5</span
+                              >
+                              <span class="rable-review">4.2 Review</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-2.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Ford Mustang</span>
+                           </td>
+                           <td>$60.00</td>
+                           <td>20 Items Left</td>
+                           <td>Tata</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 4.99</span
+                              >
+                              <span class="rable-review">50 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="d-flex gap-2">
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              <img
+                                 src="assets/images/overviews/product-3.png"
+                                 alt="RevAuto"
+                              />
+                              <span class="title">Steering Wheel Cover</span>
+                           </td>
+                           <td>$35.00</td>
+                           <td>99 Items Left</td>
+                           <td>Ford</td>
+                           <td>
+                              <span class="table-rating me-2"
+                                 ><i class="fa-sharp fa-regular fa-star"></i>
+                                 3.99</span
+                              >
+                              <span class="rable-review">200 Reviews</span>
+                           </td>
+                           <td>
+                              <button class="btn btn-sm btn-primary">
+                                 Edit
+                              </button>
+                              <button class="btn btn-sm btn-danger">
+                                 Delete
+                              </button>
+                           </td>
+                        </tr>
+                     </tbody>
                   </table>
                </div>
             </div>
