--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                      <h3 class="text-center">
                         <a
                            target="_blank"
-                           href="main-files/shop-cart.html"
+                           href="main-files/shop-cart-2.html"
                            class="primary-hover text-capitalize mt-30"
                            >Shop Cart 2</a
                         >
@@ -683,7 +683,7 @@
                      <h3 class="text-center">
                         <a
                            target="_blank"
-                           href="main-files/shop-cart.html"
+                           href="main-files/shop-cart-3.html"
                            class="primary-hover text-capitalize mt-30"
                            >Shop Cart 3</a
                         >
