--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                   <div class="col-lg-3">
                      <a
                         target="_blank"
-                        href="main-files/shop-cart.html"
+                        href="main-files/shop-cart-2.html"
                         class="preview__item image d-block"
                      >
                         <img
@@ -672,7 +672,7 @@
                   <div class="col-lg-3">
                      <a
                         target="_blank"
-                        href="main-files/shop-cart.html"
+                        href="main-files/shop-cart-2.html"
                         class="preview__item image d-block"
                      >
                         <img
