--- a/main-files/login-2.html
+++ b/main-files/login-2.html
@@ -530,7 +530,7 @@
       <!-- Login Section Start -->
       <section>
          <div class="container">
-            <div class="register-2-section">
+            <div class="register-2-section login-2-section">
                <div
                   class="d-flex align-items-center justify-content-center flex-column register-2-header"
                >
@@ -545,28 +545,13 @@
                      <div class="col-xl-7 col-lg-6 p-0">
                         <div class="register-2-form-container w-100 bg-white">
                            <div class="form-header">
-                              <h2>Register</h2>
+                              <h2>Login</h2>
                               <p>Login if you are a returning customer.</p>
                            </div>
 
                            <div class="mt-4 register-form">
                               <form action="#">
                                  <div class="row">
-                                    <div class="col-12 form-item">
-                                       <label for="full-name">Full Name*</label>
-                                       <div class="input">
-                                          <input
-                                             type="text"
-                                             id="full-name"
-                                             placeholder="Enter your full name"
-                                          />
-                                          <div class="m-0 p-0">
-                                             <i
-                                                class="fa-light fa-user text-primary"
-                                             ></i>
-                                          </div>
-                                       </div>
-                                    </div>
                                     <div class="col-12 form-item">
                                        <label for="email">Email Address*</label>
                                        <div class="input">
@@ -582,9 +567,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div
-                                       class="col-md-6 col-lg-12 col-xl-6 form-item"
-                                    >
+                                    <div class="col-12">
                                        <label for="password">Password*</label>
                                        <div class="input">
                                           <input
@@ -599,27 +582,35 @@
                                           </button>
                                        </div>
                                     </div>
+
                                     <div
-                                       class="col-md-6 col-lg-12 col-xl-6 form-item"
+                                       class="d-flex justify-content-between align-items-center col-12 mt-3"
                                     >
-                                       <label for="confirm-password"
-                                          >Confirm Password*</label
-                                       >
-                                       <div class="input">
+                                       <div class="remember-me form-check">
                                           <input
-                                             type="password"
-                                             id="confirm-password"
-                                             placeholder="Enter your email address"
+                                             class="pb-0 form-check-input"
+                                             type="checkbox"
+                                             value="remember-me"
+                                             id="RememberMe"
                                           />
-                                          <button type="button" class="m-0 p-0">
-                                             <i
-                                                class="fa-sharp fa-light fa-eye text-primary"
-                                             ></i>
-                                          </button>
+                                          <label
+                                             class="m-0 p-0"
+                                             for="RememberMe"
+                                          >
+                                             Remember me
+                                          </label>
+                                       </div>
+                                       <div>
+                                          <a
+                                             class="text-danger forgot-password"
+                                             href="forgot-password.html"
+                                             >Forgot Password?</a
+                                          >
                                        </div>
                                     </div>
-                                    <div class="d-grid col-12 mt-3">
-                                       <button type="submit">Register</button>
+
+                                    <div class="d-grid col-12 mt-4">
+                                       <button type="submit">Login</button>
                                     </div>
                                  </div>
                               </form>
@@ -629,6 +620,15 @@
                               <div>
                                  <span class="hr-text-content">Or</span>
                               </div>
+                           </div>
+
+                           <div class="d-grid mb-4">
+                              <button
+                                 class="btn btn-outline-secondary btn-lg"
+                                 type="button"
+                              >
+                                 Register
+                              </button>
                            </div>
 
                            <div
