Register 3 page done

--- a/main-files/register-3.html
+++ b/main-files/register-3.html
@@ -171,15 +171,22 @@
       <section class="container-fluid m-0 p-0">
          <div class="register-2-section register-3-section p-0 m-0 h-100">
             <div
-               class="register-2-content register-3-content m-0 p-0 rounded-0"
+               class="register-2-content register-3-content m-0 p-0 rounded-0 row"
             >
-               <div class="row">
+               <div class="col-lg-6 col-xxl-4 p-0">
                   <!-- left section -->
-                  <div class="col-xl-4 col-lg-6 p-0">
+                  <div class="register-3-left">
                      <div class="register-2-form-container w-100 bg-white">
-                        <div class="form-header">
-                           <h2>Register</h2>
-                           <p>Login if you are a returning customer.</p>
+                        <div class="form-header mb-5">
+                           <a href="index.html">
+                              <img
+                                 src="assets/img/logo/black-logo.svg"
+                                 alt="RevAuto"
+                              />
+                           </a>
+                           <p class="mt-3">
+                              Discover cutting-edge innovation and exceptional.
+                           </p>
                         </div>
 
                         <div class="mt-4 register-form">
@@ -215,9 +222,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div
-                                    class="col-md-6 col-lg-12 col-xl-6 form-item"
-                                 >
+                                 <div class="col-md-6 col-lg-12 form-item">
                                     <label for="password">Password*</label>
                                     <div class="input">
                                        <input
@@ -232,9 +237,7 @@
                                        </button>
                                     </div>
                                  </div>
-                                 <div
-                                    class="col-md-6 col-lg-12 col-xl-6 form-item"
-                                 >
+                                 <div class="col-md-6 col-lg-12 form-item">
                                     <label for="confirm-password"
                                        >Confirm Password*</label
                                     >
@@ -279,9 +282,79 @@
                         </div>
                      </div>
                   </div>
+               </div>
+
+               <div class="col-lg-6 col-xxl-8 p-0 d-none d-lg-grid">
                   <!-- right section -->
-                  <div class="col-xl-8 col-lg-6 p-0 d-none d-lg-block">
-                     <!--  -->
+                  <div class="register-3-right">
+                     <!-- over-looping button -->
+                     <a class="floating-home-button" href="index.html">
+                        <i class="fa-solid fa-house-chimney"></i>
+                     </a>
+
+                     <div
+                        class="w-100 d-flex justify-content-center align-items-center register-3-img"
+                     >
+                        <img
+                           src="assets/img/register-3/main.png"
+                           alt="RevAuto"
+                        />
+                     </div>
+
+                     <div class="features-container">
+                        <div class="row">
+                           <div class="col-6 col-xxl-4">
+                              <div class="feature-item">
+                                 <h4>Steering Wheel Cover</h4>
+                                 <p>
+                                    Phasellus ultricies aliquam volutpat
+                                    ullamcorper laoreet neque
+                                 </p>
+                              </div>
+                           </div>
+                           <div class="col-6 col-xxl-4">
+                              <div class="feature-item">
+                                 <h4>Steering Wheel Cover</h4>
+                                 <p>
+                                    Phasellus ultricies aliquam volutpat
+                                    ullamcorper laoreet neque
+                                 </p>
+                              </div>
+                           </div>
+                           <div class="col-lg-4 d-none d-xxl-block">
+                              <div class="feature-item">
+                                 <h4>Steering Wheel Cover</h4>
+                                 <p>
+                                    Phasellus ultricies aliquam volutpat
+                                    ullamcorper laoreet neque
+                                 </p>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+
+                     <!-- Footer section started -->
+                     <footer class="footer-2">
+                        <div class="container border-top">
+                           <div
+                              class="d-flex flex-md-row flex-column align-md-items-center justify-content-md-between footer-2-merge-3"
+                           >
+                              <p
+                                 class="footnote text-center text-md-start mb-2 mb-md-0"
+                              >
+                                 &copy;2024 Copyrights; All right reserved.
+                              </p>
+
+                              <ul
+                                 class="d-flex align-items-center gap-2 mx-auto mx-md-0"
+                              >
+                                 <li><a href="#">Terms of Use</a></li>
+                                 <li class="separator">|</li>
+                                 <li><a href="#">Privacy & Policy</a></li>
+                              </ul>
+                           </div>
+                        </div>
+                     </footer>
                   </div>
                </div>
             </div>
