Update input fields

--- a/main-files/register-3.html
+++ b/main-files/register-3.html
@@ -222,13 +222,13 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div class="col-md-6 col-lg-12 form-item">
+                                 <div class="col-sm-6 form-item">
                                     <label for="password">Password*</label>
                                     <div class="input">
                                        <input
                                           type="password"
                                           id="password"
-                                          placeholder="Enter your email address"
+                                          placeholder="******"
                                        />
                                        <button type="button" class="m-0 p-0">
                                           <i
@@ -237,7 +237,7 @@
                                        </button>
                                     </div>
                                  </div>
-                                 <div class="col-md-6 col-lg-12 form-item">
+                                 <div class="col-sm-6 form-item">
                                     <label for="confirm-password"
                                        >Confirm Password*</label
                                     >
@@ -245,7 +245,7 @@
                                        <input
                                           type="password"
                                           id="confirm-password"
-                                          placeholder="Enter your email address"
+                                          placeholder="******"
                                        />
                                        <button type="button" class="m-0 p-0">
                                           <i
