--- a/main-files/login-2.html
+++ b/main-files/login-2.html
@@ -623,12 +623,13 @@
                            </div>
 
                            <div class="d-grid mb-4">
-                              <button
+                              <a
+                                 href="register-2.html"
                                  class="btn btn-outline-secondary btn-lg"
                                  type="button"
                               >
                                  Register
-                              </button>
+                              </a>
                            </div>
 
                            <div
